<?xml version="1.0"?>
<package format="2">
  <name>examples</name>
  <version>0.0.1</version>
  <description>Example Autonomous System to show how to connect with the FSDS system</description>

  <maintainer email="sijmenhuizenga@gmail.com">Sijmen Huizenga</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>fsds_ros_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>fsds_ros_bridge</exec_depend>

</package>