<?xml version="1.0"?>
<package format="2">
  <name>joystick</name>
  <version>0.0.1</version>
  <description>Joystick node that sends fsds car sepoints</description>

  <maintainer email="sijmenhuizenga@gmail.com">Sijmen Huizenga</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>fsds_ros_bridge</build_depend>
  <build_depend>joy</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>fsds_ros_bridge</exec_depend>

</package>