<?xml version="1.0"?>
<package format="2">
  <name>fs_msgs</name>
  <version>0.1.0</version>
  <description>
	Common Formula Student ROS messages
  </description>
  <maintainer email="davidoort@hotmail.com">David Oort Alonso</maintainer>
  <maintainer email="sijmenhuizenga@gmail.com">Sijmen Huizenga</maintainer>
  <license>Apache-License-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
</package>
